--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,24 +87,31 @@ body {
 /* <section > Introduction */
 
 .introduction__image {
+  position: relative;
   margin: 0px 20px;
-  display: flex;
-  justify-content: center;
-  background: url(../images/beef-stew.jpg) no-repeat center;
-  background-size: cover;
   height: 200px;
   width: auto;
-  animation: zoomImage 2.6s ease-in-out forwards;
+  justify-content: center;
+  align-items: flex-end;
+}
+.introduction__photo {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   border-radius: 20px;
 }
 .introduction__subtitle {
-  color: white;
-  background-color: rgba(0, 0, 0, 0.75);
-  border-radius: 10px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #ffffff;
+  border-radius: 20px;
   text-align: center;
-  height: auto;
-  width: auto;
-  align-self: flex-end;
+  font-weight: bold;
+  font-size: large;
 }
 .introduction__text {
   margin-left: 20px;
@@ -356,7 +363,11 @@ body {
     flex-direction: column;
   }
   .introduction__subtitle {
-    align-self: center;
+    font-weight: normal;
+  }
+
+  .introduction__text {
+    margin: 0;
   }
 
   .header__link {
