--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,6 +273,13 @@ body {
   border-radius: 20px;
 }
 
+.recipes__video {
+  width: 100%;
+  height: 600px;
+  margin: 20px;
+  border-radius: 20px;
+}
+
 .contact {
   display: flex;
   justify-content: center;
