Add shadow to all recipes__

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,12 +265,14 @@ body {
   margin: 0 1%;
   background-color: #f0b669;
   border-radius: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .recipes__instructions {
   width: 100%;
   background-color: #f0b669;
   margin: 20px;
   border-radius: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .recipes__video {
@@ -278,6 +280,7 @@ body {
   height: 600px;
   margin: 20px;
   border-radius: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .contact {
