--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,8 +95,7 @@ body {
 }
 /* End of Header section */
 
-/* <section > Introduction */
-
+/* Introduction section */
 .introduction__image {
   position: relative;
   margin: 0px 20px;
@@ -105,6 +104,7 @@ body {
   justify-content: center;
   align-items: flex-end;
 }
+/* Introduction photo */
 .introduction__photo {
   position: relative;
   width: 100%;
@@ -112,6 +112,7 @@ body {
   object-fit: cover;
   border-radius: 20px;
 }
+/* Introduction subtitle */
 .introduction__subtitle {
   position: absolute;
   bottom: 0;
@@ -124,11 +125,12 @@ body {
   font-weight: bold;
   font-size: large;
 }
+/* Introduction text */
 .introduction__text {
   margin-left: 20px;
   margin-right: 20px;
 }
-/* </section> Introduction */
+/* End of Introduction section */
 
 /* <section > About */
 .about {
