--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,12 +244,13 @@ body {
 }
 /* End of Footer section */
 
-/* <section class="recipes"> */
+/* Recipes section */
 .recipes {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+/* Recipes introduction */
 .recipes__introduction {
   margin: 50px 20px 20px 20px;
   background-color: #f2deba;
@@ -257,7 +258,7 @@ body {
   padding: 10px;
   text-align: center;
 }
-
+/* Recipe container */
 .recipes__recipe {
   display: flex;
   flex-direction: column;
@@ -267,18 +268,18 @@ body {
   border-radius: 20px;
   margin: 20px 0;
 }
-
+/* Recipe title */
 .recipes__title2 {
   text-align: center;
 }
-
+/* Recipe container for photo, ingredients, instructions and video */
 .recipes__container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
 }
-
+/* Recipe photo */
 .recipes__photo {
   object-fit: cover;
   width: 47%;
@@ -286,7 +287,7 @@ body {
   margin: 0 1%;
   border-radius: 20px;
 }
-
+/* Recipe ingredients */
 .recipes__ingredients {
   width: 47%;
   margin: 0 1%;
@@ -294,6 +295,7 @@ body {
   border-radius: 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+/* Recipe instructions */
 .recipes__instructions {
   width: 100%;
   background-color: #f0b669;
@@ -301,7 +303,7 @@ body {
   border-radius: 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
+/* Recipe video */
 .recipes__video {
   width: 100%;
   height: 600px;
@@ -309,6 +311,7 @@ body {
   border-radius: 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+/* End of Recipes section */
 
 .contact {
   display: flex;
